# stm32f0-linux

./: CMakeLists.txt  Makefile  README.md
Inc/: main.h  stm32f0_discovery.h
Src/: main.c  stm32f0xx_it.c
